--- a/app/views/todo_lists/_form.html.erb
+++ b/app/views/todo_lists/_form.html.erb
@@ -1,32 +1,29 @@
 <%= form_with(model: todo_list, local: true) do |form| %>
-  <% if todo_list.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(todo_list.errors.count, "error") %> prohibited this todo_list from being saved:</h2>
+<% if todo_list.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(todo_list.errors.count, "error") %>
+      gjorde at denne huskelisten ikke kunne lagres:</h2>
 
-      <ul>
+    <ul>
       <% todo_list.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
+    </ul>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
   </div>
+<% end %>
 
-  <div class="field">
-    <%= form.label :string %>
-    <%= form.text_field :string %>
-  </div>
+<div class="field">
+  <%= form.label :Tittel %>
+  <%= form.text_field :title, id: :todo_list_title %>
+</div>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
+<div class="field">
+  <%= form.label :Beskrivelse %>
+  <%= form.text_area :description, id: :todo_list_description %>
+</div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+<div class="actions">
+  <%= form.submit %>
+</div>
 <% end %>
