--- a/app/views/todo_lists/edit.html.erb
+++ b/app/views/todo_lists/edit.html.erb
@@ -1,7 +1,7 @@
-<h1 class="todo_list_title">Editing Todo List</h1>
+<h1 class="todo_list_title">Rediger huskeliste</h1>
 <div class="forms">
 <%= render 'form', todo_list: @todo_list %>
 </div>
 <div class="links">
-<%= link_to 'Cancel', todo_lists_path %>
+<%= link_to 'Avbryt', todo_lists_path %>
 </div>
