--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -4,6 +4,7 @@
   <p class="todo_list_sub_title"><%= todo_list.description %></p>
 </div>
 <% end %>
+
 <div class="links">
-  <%= link_to "New Todo List", new_todo_list_path %>
+  <%= link_to "Ny huskeliste", new_todo_list_path %>
 </div>
