--- a/app/views/todo_items/_form.html.erb
+++ b/app/views/todo_items/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_for([@todo_list, @todo_list.todo_items.build]) do |f| %>
 	<%= f.text_field :content, placeholder: "Ny oppføring" %>
-	<%= f.submit %>
+	<%= f.submit "Legg til" %>
 <% end %>
